src/angular/styles/_typography.scss
/* ... */
.sbb-selection-container-checked {
  color: var(--sbb-selection-icon-color-default);
  line-height: 0;
  height: 100%;
  width: 100%;
  transition: opacity var(--sbb-transition-default);
  position: relative;

  :is(.sbb-checkbox, .sbb-pseudo-checkbox) & {
    display: none;
    border-radius: var(--sbb-border-radius);
    transform: scale(1.3);

    & > svg {
      display: inline-block;
      line-height: 0;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;

      & > polyline {
        stroke: currentColor;
      }
    }
  }

  .sbb-radio-button & {
    display: none;
    border-radius: 50%;
    transform: scale(0.65);
    background-color: var(--sbb-selection-icon-color-default);

    @include cdk.high-contrast(active, off) {
      background-color: CanvasText;
    }
  }

  .sbb-selection-disabled & {
    color: var(--sbb-selection-icon-color-disabled);
  }

  .sbb-selection-checked & {
    display: block;
  }

  .sbb-selection-indeterminate & {
    display: none;
  }
}

.sbb-selection-content {
  @include sbb.user-select(auto);
  color: var(--sbb-selection-label-color-unchecked);
  transition: color var(--sbb-transition-default);

  :where(html.sbb-lean) & {
    line-height: sbb.pxToRem(20);
  }

  :is(.sbb-selection-checked, .sbb-selection-indeterminate) & {
    color: var(--sbb-selection-label-color-checked);
  }

  .sbb-selection-disabled & {
    color: var(--sbb-selection-label-color-disabled);
  }
}

.sbb-selection-disabled {
  pointer-events: none;

  @include cdk.high-contrast(active, off) {
    opacity: 0.5;
  }
}

:is(.sbb-checkbox-group-vertical, .sbb-radio-group-vertical) {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: flex-start;
  row-gap: calc(#{sbb.pxToRem(16)} * var(--sbb-scaling-factor));

  :where(html.sbb-lean) & {
    row-gap: sbb.pxToRem(3);
  }
}

:is(.sbb-checkbox-group-horizontal, .sbb-radio-group-horizontal) {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  column-gap: calc(#{sbb.pxToRem(32)} * var(--sbb-scaling-factor));

  :where(html.sbb-lean) & {
    column-gap: sbb.pxToRem(15);
  }
}

// ----------------------------------------------------------------------------------------------------
// SBB Checkbox Panel & Radio Button Panel
// ----------------------------------------------------------------------------------------------------

.sbb-selection-panel-item {
  display: inline-block;
  background-color: var(--sbb-color-milk);
  border: var(--sbb-border-width-thin) solid transparent;
  border-radius: var(--sbb-border-radius);
  font-size: var(--sbb-font-size);
  line-height: var(--sbb-line-height);
  color: var(--sbb-color-granite);
  width: 100%;
  transition: border-color 0.15s ease-in-out;
  position: relative;

  &.sbb-selection-checked {
    background-color: var(--sbb-color-background);
    border-color: var(--sbb-color-black);
    color: var(--sbb-color-text);
  }

  // We need to provide error styling for both on the element
  // or on a wrapper (e.g. sbb-radio-group) with both manual
  // classes and Angular Form Validation classes.
  &:is(.sbb-selection-error, .ng-touched.ng-invalid),
  .sbb-radio-group-base:is(.sbb-selection-error, .ng-touched.ng-invalid) & {
    border-color: var(--sbb-color-error);
    color: var(--sbb-color-error);
  }

  &.sbb-selection-disabled {
    background-color: var(--sbb-color-background);
    border-color: var(--sbb-color-aluminum);
  }

  :is(.sbb-selection-container, .sbb-selection-panel-icon) {
    display: inline-block;
    flex: 0 0 auto;
  }

  .sbb-selection-content {
    flex: 1 auto;
    display: flex;
    flex-wrap: wrap;
    overflow-x: hidden;
    gap: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));
  }
}

.sbb-selection-panel-item .sbb-selection-item-label {
  padding: sbb.pxToRem(18) sbb.pxToRem(24);

  :where(html:not(.sbb-lean)) & {
    @include sbb.mq($from: desktop4k) {
      padding: sbb.pxToRem(27) sbb.pxToRem(36) sbb.pxToRem(26);
    }
    @include sbb.mq($from: desktop5k) {
      padding: sbb.pxToRem(37) sbb.pxToRem(48) sbb.pxToRem(35);
    }
  }
}

.sbb-selection-inner-content {
  flex-direction: column;
  display: flex;
  flex: 1 1 50%;
  padding-right: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));

  &:not(:only-child) {
    margin-right: calc(#{sbb.pxToRem(16)} * var(--sbb-scaling-factor));
  }
}

.sbb-selection-panel-subtitle {
  font-size: var(--sbb-font-size-small);
  line-height: var(--sbb-line-height-small);
  color: var(--sbb-color-granite);
}

.sbb-selection-panel-warning {
  flex: 1 100%;
  order: 3;
  color: var(--sbb-color-granite);

  @include sbb.mq($from: tablet) {
    flex-basis: 0;
    order: initial;
    margin-top: initial;
  }
}

.sbb-selection-panel-note {
  margin-left: auto;
  margin-bottom: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));

  @include sbb.mq($from: tablet) {
    margin-bottom: 0;
  }

  img {
    max-height: calc(#{sbb.pxToRem(24)} * var(--sbb-scaling-factor));
  }
}

// These are the css classes to group sbb-checkbox-panel & sbb-radio-button-panel
// We use em here to reduce media query usage.
:is(.sbb-checkbox-panel-group, .sbb-radio-panel-group) {
  display: grid;
  grid-template-columns: 1fr;
  gap: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor))
    calc(#{sbb.pxToRem(6)} * var(--sbb-scaling-factor));
  font-size: var(--sbb-font-size);

  // The number indicates the max number of columns for the resolution
  $sbbSelectionPanelResolutions: (
    tablet: 4,
    desktop: 8,
    desktopLarge: 8,
    desktop2k: 8,
    desktop4k: 8,
    desktop5k: 8,
  );

  @each $from, $max in $sbbSelectionPanelResolutions {
    @include sbb.mq($from: $from) {
      @for $i from 2 through $max {
        &.sbb-col-#{$from}-#{$i} {
          grid-template-columns: repeat(#{$i}, 1fr);
        }
      }
    }
  }
}
/* ... */

